@@ -1,3 +1,13 @@
+2008-03-28  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Geoffrey Garen.
+
+        Add emitCode support for ConditionalNode.
+
+        * kjs/nodes.cpp:
+        (KJS::ConditionalNode::emitCode):
+        * kjs/nodes.h:
+
 2008-03-28  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
